<resources>
    <string name="app_name">Hotel App</string>
    <string name="sign_in">Sign in</string>
    <string name="home_page" translatable="false">Home page</string>
    <string name="order_list" translatable="false">Order List</string>
    <string name="new_reservation" translatable="false">New Reservation</string>
    <string-array name="TypeZimmer">
        <item>Single</item>
        <item>Double</item>
    </string-array>
    <string name="first_name" translatable="false">Vorname</string>
    <string name="col1">OrderID</string>
    <string name="col2">First name</string>
    <string name="col3">Last name</string>
    <string name="col4">Delete</string>

    <string name="row1">#1</string>
    <string name="row2">Iliass</string>
    <string name="row3">Belahmer</string>
    <string name="row4">Delete</string>

    <string name="row5">#2</string>
    <string name="row6">Oussama</string>
    <string name="row7">Hamioui</string>
    <string name="email">Email</string>
    <string name="handy_nr">Handy Nr</string>
    <string name="land">Land</string>
    <string name="speichern">Speichern</string>
    <string name="username">Username</string>
    <string name="nachname">Nachname</string>
    <string name="geburtsdatum">Geburtsdatum</string>
    <string name="customer_id">customer_id</string>
    <string name="room_id">room_id</string>
    <string name="check_in">check_in</string>
    <string name="check_out">check_out</string>
    <string name="type_zimmer">Type Zimmer</string>
    <string name="client_id">Client ID</string>
    <string name="feedback_geben">Feedback geben</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="meine_reservierungen">Meine Reservierungen</string>
    <string name="aufenthalt_verl_ngern">Aufenthalt verlängern</string>
    <string name="kontakt">Kontakt</string>
    <string name="button">Button</string>
    <string name="customer_name">Customer Name</string>
    <string name="room_type">Room Type</string>
    <string name="add">ADD</string>
    <string name="room_number">Room Number</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>