<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewUser"
    android:background="@color/colorGreen"
    android:paddingTop="30dp">
    <!--
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="7">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="Vorname :"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:inputType="textPersonName"
            android:text="Name"
            android:layout_row="0"
            android:layout_column="1"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
           android:layout_margin="10dp"
            android:text="Nachname :"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="Geburtsdatum :"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="Email :"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="HandyNummer :"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="Land :"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="Geburtsdatum :"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />


    </GridLayout>
    -->

    <EditText
        android:id="@+id/vorname"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints=""
        android:background="#30ffffff"
        android:hint="@string/username"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#6D4C41"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/nachname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="539dp"
        android:autofillHints=""
        android:background="#30ffffff"
        android:hint="@string/nachname"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#6D4C41"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vorname"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/geburtsdatum"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="539dp"
        android:autofillHints=""
        android:background="#30ffffff"
        android:hint="@string/geburtsdatum"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#6D4C41"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nachname"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="539dp"
        android:autofillHints=""
        android:background="#30ffffff"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#6D4C41"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/geburtsdatum"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="539dp"
        android:autofillHints=""
        android:background="#30ffffff"
        android:hint="@string/handy_nr"
        android:inputType="phone"
        android:singleLine="true"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#6D4C41"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="539dp"
        android:autofillHints=""
        android:background="#30ffffff"
        android:hint="@string/land"
        android:singleLine="true"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#6D4C41"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/speichern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/speichern"
        android:background="@drawable/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />


</androidx.constraintlayout.widget.ConstraintLayout>